--- a/_notebooks/variables/2025-01-09-popcornHax.ipynb
+++ b/_notebooks/variables/2025-01-09-popcornHax.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -82,7 +82,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "//Define variables up here. Make sure they are both number values.\nlet charHealth = 100.0;\nconst damage = 13.5;\n//Update charHealth after the player has taken damage. The character should lose health relative to damage taken.\ncharHealth -= damage;\nconsole.log(charHealth);\n",
+      "application/javascript": "//Define variables up here. Make sure they are both number values.\nlet charHealth = 100.0;\nconst damage = 13.5;\n//Update charHealth after the player has taken damage. The character should lose health relative to damage taken. Print your results.\ncharHealth -= damage;\nconsole.log(charHealth);\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -94,11 +94,11 @@
    "source": [
     "%%js\n",
     "//Define variables up here. Make sure they are both number values.\n",
-    "let charHealth = 100.0;\n",
-    "const damage = 13.5;\n",
+    "let charHealth = \n",
+    "\n",
     "//Update charHealth after the player has taken damage. The character should lose health relative to damage taken. Print your results.\n",
-    "charHealth -= damage;\n",
-    "console.log(charHealth);"
+    "charHealth -= \n",
+    "console.log();"
    ]
   },
   {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -120,7 +120,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "//Define variables and combine them here\nlet msg1 = \"Hello, world!\";\nlet msg2 = \", world!\";\nlet finalMessage = msg1 - msg2;\n//Print results here.\nconsole.log(finalMessage);\n",
+      "application/javascript": "//Define variables and combine them here\nlet messagePart1 = \nlet messagePart2 = \nlet finalMessage = \n//Print results here.\nconsole.log();//Insert variable\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -145,13 +145,13 @@
    "source": [
     "<b1>\n",
     "Make sure to end each line with a semicolon (;). \n",
-    "<br>Part 2: Using this if conditional, see if you can get the console to output \"You have successfully manipulated these strings! Good Job!\" If you fail, it will tell you.\n",
+    "<br>Part 2: Using this if conditional, see if you can get the console to output \"You have successfully manipulated these strings! Good Job!\" If you don't get the desired result, try again.\n",
     "</b1>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -160,7 +160,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "let m1 = \"Hello, \";\nlet m2 = \"\"; //Edit this \nif (){\n    \n}\n",
+      "application/javascript": "let m1 = \"Hello, \";\nlet m2 = \"\"; //Edit this \nconst messageSuccess = \"You have successfully manipulated these strings! Good Job!\"\nif (m1 + m2 === \"Hello, world!\"){\n    console.log(messageSuccess);\n} else {\n    console.log(\"Failed to match strings. Try again.\");\n}\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -171,14 +171,50 @@
    ],
    "source": [
     "%%js\n",
-    "let m1 = \"Hello, \";\n",
+    "let m1 = \"\";\n",
     "let m2 = \"\"; //Edit this \n",
-    "const messageSuccess = \"You have successfully manipulated these strings! Good Job!\"\n",
-    "if (m1 + m2 === \"Hello, world!\"){\n",
-    "    console.log(messageSuccess);\n",
+    "\n",
+    "if (m1 + m2 == \"Hello, world!\"){\n",
+    "    console.log(\"You have successfully manipulated these strings! Good Job!\");\n",
     "} else {\n",
     "    console.log(\"Failed to match strings. Try again.\");\n",
-    "}"
+    "}\n",
+    "console.log(m1 + m2); //Should say \"Hello, world!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try defining a score variable and a string that displays the player's score. A very basic version of this has been set up for you here, using Math.random() to get a random number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "let gambling = Math.round(100 * Math.random()) //Random integer from 0 to 100\nlet gamblingTalk = `Your random number is ${gambling}! Spin again?`//Use graves and ${} to make gamblingTalk contain the random number.\n\nconsole.log(gamblingTalk); //Print gamblingTalk.\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js \n",
+    "let gambling = Math.round(100 * Math.random()) //Random integer from 0 to 100. Math.round just takes the decimal produced by Math.random and rounds it for you (crazy I know).\n",
+    "let gamblingTalk = ``//Use graves and ${} to make gamblingTalk contain the random number, along with a message.\n",
+    "\n",
+    "console.log(); //Print gamblingTalk."
    ]
   },
   {
@@ -190,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -231,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -240,7 +276,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "//Define your variables. \nlet isGreaterThan = false; //by default, this is false. That means if you don't change it, it will stay false.\nlet randomNum = Math.random();\nif (randomNum > 0.7) { //Put something in the parentheses to check if the random number is over 0.7.\n    isGreaterThan = true;\n} \nconsole.log(isGreaterThan); //Outputs the value of isGreaterThan\n",
+      "application/javascript": "//Define your variables. \nlet isGreaterThan = false; //By default, this is false. That means if the program doesn't change it, it will stay false and output false\nlet randomNum = Math.random();\nif (randomNum > 0.7) { //Put something in the parentheses to check if the random number is over 0.7.\n    isGreaterThan = true;\n} \nconsole.log(isGreaterThan); //Outputs the value of isGreaterThan\n\n//Run this a few times, and see if you get a mix of true and false outputs.\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -251,13 +287,12 @@
    ],
    "source": [
     "%%js\n",
-    "//Define your variables. \n",
-    "let isGreaterThan = false; //By default, this is false. That means if the program doesn't change it, it will stay false and output false\n",
-    "let randomNum = Math.random();\n",
-    "if (randomNum > 0.7) { //Put something in the parentheses to check if the random number is over 0.7.\n",
+    "let isGreaterThan = ; //What should this be defined as by default?\n",
+    "let randomNum = Math.random(); //Makes a random number.\n",
+    "if () { //Put something in the parentheses to check if the random number is over 0.7.\n",
     "    isGreaterThan = true;\n",
     "} \n",
-    "console.log(isGreaterThan); //Outputs the value of isGreaterThan\n",
+    "console.log(); //Output the value of isGreaterThan\n",
     "\n",
     "//Run this a few times, and see if you get a mix of true and false outputs.\n"
    ]
@@ -275,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -284,7 +319,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "let message1;\nconsole.log(message1);\nconsole.log(typeof message1);\n",
+      "application/javascript": "//This is a very open-ended exercise. What type of variable to you want message1 to be? Depending on your answer, you will define message1 differently.\nlet message1; //Change this.\nconsole.log(message1);\nconsole.log(typeof message1);\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -295,10 +330,11 @@
    ],
    "source": [
     "%%js\n",
-    "//This is a very open-ended exercise. What type of variable to you want message1 to be? Depending on your answer, you will define message1 differently.\n",
-    "let message1; //Change this.\n",
-    "console.log(message1);\n",
-    "console.log(typeof message1);"
+    "//This is a very open-ended exercise. What type of variable to you want message1 to be? Depending on your answer, \n",
+    "// you will define message1 differently, likely with a different name (like score or isAlive).\n",
+    "let message1; //Change this, go nuts.\n",
+    "console.log(); //Output the variable.\n",
+    "console.log(); //Output its type."
    ]
   },
   {
@@ -313,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -333,10 +369,10 @@
    ],
    "source": [
     "%%js\n",
-    "let bigNumber = //Pick a big number!\n",
+    "let bigNumber = //Pick a big number. End it with n to make sure it's a bigInt type of variable.\n",
     "let x = Number.MAX_SAFE_INTEGER;\n",
-    "console.log(bigNumber > x); //Checks to make sure your number is big enough. True = yes.\n",
-    "console.log(bigNumber)"
+    "console.log(); //Check to make sure your number is big enough (so, bigger than x). You're looking for a \"true\" output.\n",
+    "console.log(bigNumber); //Big number go brrrrr"
    ]
   },
   {
@@ -351,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -360,7 +396,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "//A few variables are included for you already, fill the rest in on your own.\nlet player = {\n    name: \"pika43\",\n    health: 25\n\n\n\n};\n//Reference your parts here.\nconsole.log(player);\nconsole.log();\n//Change and reference player's health\nplayer.health = 20;\nconsole.log(player.health);\n",
+      "application/javascript": "//A few variables are included for you already, fill the rest in on your own.\nlet player = {\n    name: \"pika43\", //Replace with your name/gamertag.\n    health: 25 //commas between every term, except the last one.\n\n\n\n};\n//Reference your parts here.\nconsole.log(player.name);\nconsole.log(player.);//Put something after the period to reference it from the object, player.\n\n\n//Change and reference player's health\nplayer.health = ;\nconsole.log(player.health); //new health \n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -379,9 +415,9 @@
     "\n",
     "\n",
     "};\n",
-    "//Reference your parts here.\n",
+    "//Reference your parts here. Add one final console.log() and just print player. See what happens.\n",
     "console.log(player.name);\n",
-    "console.log(player.);//Put something after the period to reference it from the object, player.\n",
+    "\n",
     "\n",
     "\n",
     "//Change and reference player's health\n",
@@ -402,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -411,7 +447,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "const password = Symbol(); //Defines the password symbol. It's okay to leave his empty, as you will assign the symbol a value in the object.\nconst backupPassword = Symbol(); //\nlet user ={\n    [password]: \"epicC0ding1234\", //Assign the symbol a value here. \n    [password]: \"epicC0ding1234\", //Assign your backup password a value. Make this the same as your default password.\n\n    username: \"pika43\" //Fill in the rest of the object's properties. Replace this username with your own.\n\n}\n//Referencing symbols looks like this:\nconsole.log(user[password]);\n//This outputs the value of \"password\" you assigned earlier.\n\nconsole.log(\"v THE POWER OF SYMBOLS v\"); //THE POWER OF SYMBOLS\n\nconst enemy1Damage = 15;\nconst enemy2MaxHealth = 15;\nconsole.log (enemy1Damage === enemy2MaxHealth);\n//This will output true, since both variables are numbers with the same value. \n//With constants that are used for different reasons, this can be a problem. \n//You wouldn't subtract an enemy's max health from your to deal damage! What if you need these two to be unique?\n\nconsole.log(password === backupPassword);\n//This, surprisingly, will output false. This is because each of these symbols are fully, entirely unique. \n// Even though both are symbol type variables with the same value stored inside them, the computer recognizes these both as fi\n",
+      "application/javascript": "const password = Symbol(); //Defines the password symbol. It's okay to leave his empty, as you will assign the symbol a value in the object.\nconst backupPassword = Symbol(); //\nlet user ={\n    [password]:  //Assign the symbol a value here. \n    [backupPassword]:  //Assign your backup password a value. Make this the same as your default password.\n    username: \"pika43\" //Fill in the rest of the object's properties. Replace this username with your own.\n\n}\n//Referencing symbols looks like this:\nconsole.log(user[password]);\n//This outputs the value of \"password\" you assigned earlier.\n\n//Bonus!\nconsole.log(\"v THE POWER OF SYMBOLS v\"); //THE POWER OF SYMBOLS\n\nconst enemy1Damage = 15;\nconst enemy2MaxHealth = 15;\nconsole.log (enemy1Damage === enemy2MaxHealth);\n//This will output true, since both variables are numbers with the same value. \n//With constants that are used for different reasons, this can be a problem. \n//You wouldn't subtract an enemy's max health from your to deal damage! What if you need these two to be unique?\n\nconsole.log(password === backupPassword);\n//This, surprisingly, will output false. This is because each of these symbols are fully, entirely unique. \n// Even though both are symbol type variables with the same value stored inside them, the computer recognizes these both as fi\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -432,21 +468,39 @@
     "}\n",
     "//Referencing symbols looks like this:\n",
     "console.log(user[password]);\n",
-    "//This outputs the value of \"password\" you assigned earlier.\n",
-    "\n",
+    "//This outputs the value of \"password\" you assigned earlier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b1>Bonus time!</b1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "//Bonus!\n",
     "console.log(\"v THE POWER OF SYMBOLS v\"); //THE POWER OF SYMBOLS\n",
     "\n",
-    "const enemy1Damage = 15;\n",
-    "const enemy2MaxHealth = 15;\n",
-    "console.log (enemy1Damage === enemy2MaxHealth);\n",
-    "//This will output true, since both variables are numbers with the same value. \n",
-    "//With constants that are used for different reasons, this can be a problem. \n",
-    "//You wouldn't subtract an enemy's max health from your to deal damage! What if you need these two to be unique?\n",
+    "const enemy1Damage //Define these constants to hold the same number.\n",
+    "const enemy2MaxHealth \n",
+    "console.log (); //Use a strict equality to see if the numbers are the same.\n",
     "\n",
-    "console.log(password === backupPassword);\n",
-    "//This, surprisingly, will output false. This is because each of these symbols are fully, entirely unique. \n",
-    "// Even though both are symbol type variables with the same value stored inside them, the computer recognizes these both as fi"
+    "const symbol1 = Symbol(); //Define both symbols to have the same contents.\n",
+    "const symbol2 = Symbol(); //Fill inside parentheses (use a string please).\n",
+    "\n",
+    "console.log(); //Use a strict equality to see if the symbols are the same.\n",
+    "\n",
+    "//AFTER COMPLETING THE BONUS, GO CHECK ANSWER KEY FOR THIS EXERCISE!!!!!"
    ]
   }
  ],
